# tali

./: .gitignore  AGENTS.md  Cheatsheet.md  README.md  justfile  kd  prof  pyproject.toml  ruff.toml  t
.github/workflows/: ci.yml  publish.yml  test.yml
kodo/: book.py  cli.py  common.py  config.yaml  constants.py  item.py  render.py  utils.py
kodo/book/: __init__.py  book.py  item.py  select.py
kodo/parser/: command.grammar  command.py  datetime.grammar  datetime.py  main.grammar  main.py
kodo/render/: cli.py  utils.py
tali/: __init__.py  cli.py  common.py  config.yaml
tali/book/: __init__.py  book.py  history.py  item.py  result.py  select.py
tali/parser/: __init__.py  command.grammar  command.py  datetime.py  editor.py  indent.py  text.py
tali/render/: cheatsheet.py  cli.py  common.py
tests/: test_cheatsheet.py  test_cli.py  test_cli_action.py  test_deadline_action.py  test_editor_format.py  test_indent.py  test_parse_command.py  test_parse_datetime.py  test_subitems.py
tusk/: __init__.py  cli.py  common.py  config.yaml
tusk/book/: __init__.py  book.py  file.py  history.py  item.py  result.py  select.py
tusk/parser/: command.grammar  command.py  common.py  datetime.grammar  datetime.py
tusk/render/: cheatsheet.py  cli.py  common.py  utils.py
vim/: README.md
vim/ftdetect/: tali.vim
vim/syntax/: tali.vim
