[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tali"
dynamic = ["version"]
description = "tali • The CLI magic for task alchemists:man_mage: • Weave productivity spells:scroll: with symbols that conjures order:notebook: from chaos:cyclone:."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
    {name = "admk"}
]
keywords = ["cli", "task", "todo", "productivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "GitPython>=3.1",
    "python-box>=7.0",
    "parsimonious>=0.10",
    "rich>=12.5",
    "rich-argparse",
]

[project.scripts]
tali = "tali.cli:main"

[project.urls]
Homepage = "https://github.com/admk/tali"
Issues = "https://github.com/admk/tali/issues"

[tool.setuptools.packages.find]
include = ["tali", "tali.*"]

[tool.setuptools.dynamic]
version = {attr = "tali.__version__"}
